[workspace]
members = [".", "protobufs", "tck"]

[package]
description = "The SDK for interacting with Hedera Hashgraph."
edition = "2021"
license = "Apache-2.0"
name = "hiero-sdk"
readme = "README.md"
repository = "https://github.com/hiero-ledger/hiero-sdk-rust"
version = "0.43.0"

[lib]
bench = false

[features]
default = ["mnemonic", "serde"]
# Enables config
serde = ["dep:serde", "dep:serde_derive", "dep:serde_json"]
mnemonic = []

[dependencies]
async-stream = "0.3.6"
backoff = "0.4.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
fraction = { version = "0.15.1", default-features = false }
futures-core = "0.3.31"
# Transitive dependency of tonic 0.12
h2 = "0.4.12"
hiero-sdk-proto = { path = "./protobufs", version = "0.20.0", features = ["time_0_3", "fraction"] }
hex = "0.4.3"
hmac = "0.12.1"
# Dependency of tonic 0.12
hyper = { version = "1.6", default-features = false }
log = "0.4.28"
num-bigint = "0.4.3"
once_cell = "1.21.3"
pbkdf2 = { version = "0.12.0", default-features = false }
rand = "0.8.5"
sha2 = "0.10.9"
sha3 = "0.10.2"
thiserror = "2.0.15"
time = "0.3.43"
tokio = { version = "1.48.0", features = ["time"] }
tonic = "0.12.3"
tinystr = { version = "0.7.0", default-features = false }
arc-swap = "1.8.0"
rlp = "0.6.1"
bytes = { version = "1.2.1", default-features = false }
pin-project-lite = "0.2.16"
unsize = "1.1.0"
parking_lot = "0.12.5"
serde_json = { version = "1.0.148", optional = true }
serde = { version = "1.0.224", optional = true }
serde_derive = { version = "1.0.163", optional = true }
pem = "3.0.6"
cbc = "0.1.2"
aes = "0.8.3"
md5 = "0.8.0"
sec1 = { version = "0.7.3", features = ["der"] }
tower = { version = "0.5.2", features = ["util"] }
openssl = "0.10.72"
hyper-util = "0.1.16"
hyper-openssl = {version = "0.10.2", features = ["client-legacy"]}

[dependencies.futures-util]
version = "0.3.31"
default-features = false

[dependencies.prost]
version = "0.13.5"
default-features = false
features = ["std"]

[dependencies.rust_decimal]
version = "1.39.0"
default-features = false
features = ["std"]

[dependencies.k256]
version = "0.13.4"
default-features = false
features = ["ecdsa", "precomputed-tables", "std"]

[dependencies.pkcs8]
version = "0.10.0"
default-features = false
features = ["encryption"]

[dependencies.triomphe]
version = "0.1.15"
default-features = false
features = ["std", "arc-swap", "unsize"]

[dev-dependencies]
anyhow = "1.0.99"
assert_matches = "1.5.0"
clap = { version = "4.5.45", features = ["derive", "env"] }
dotenvy = "0.15.5"
expect-test = "1.5.1"
hex-literal = "1.0.0"
miniserde = "0.1.45"
parking_lot = "0.12.5"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["rt-multi-thread", "macros", "parking_lot"]

[dev-dependencies.env_logger]
version = "0.11.6"
default-features = false
features = ["auto-color", "color", "humantime"]
