[package]
name = "hedera-proto-wasm"
version = "0.1.0"
edition = "2021"
description = "Minimal Hedera protobuf definitions for WASM transaction serialization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
prost = { version = "0.13.5", default-features = false, features = ["std", "prost-derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["wasm"]
wasm = []
