[package]
edition = "2021"
license = "Apache-2.0"
name = "hedera-proto"
description = "Protobufs for the Hedera™ Hashgraph SDK"
repository = "https://github.com/hiero-ledger/hiero-sdk-rust"
version = "0.19.0"
exclude = [
    "services/.github",
    "services/config",
    "services/docs",
    "services/example-apps",
    "services/gradle",
    "services/hedera-node",
    "services/hiero-dependency-versions",
    "services/platform-sdk",
    "services/.gitignore",
    "services/.pre-commit-config.yaml",
    "services/.remarkrc",
    "services/.snyk",
    "services/build.gradle",
    "services/codecov.yml",
    "services/gradle.properties",
    "services/gradlew",
    "services/gradlew.bat",
    "services/LICENSE",
    "services/README.md",
    "services/settings.gradle.kts",
    "services/version.txt"
]

[dependencies]
fraction = { version = "0.15.1", default-features = false, optional = true }
prost-types = "0.14.1"
time_0_3 = { version = "0.3.9", optional = true, package = "time" }

[dependencies.prost]
version = "0.13.5"
default-features = false
features = ["std", "prost-derive"]

[dependencies.tonic]
version = "0.12.3"
default-features = false
features = ["prost", "codegen", "transport"]

[build-dependencies]
anyhow = "1.0.99"
prost-build = "0.13.5"
tonic-build = "0.12.3"
regex = "1.12.1"
fs_extra = "1.3.0"
