[package]
name = "hiero-sdk-tck"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/hiero-ledger/hiero-sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tokio = { version = "1.47.0", features = ["signal"] }
anyhow = "1.0.99"
tower = { version = "0.4.13", features = ["tracing"] }
tracing = "0.1.41"
async-trait = "0.1.89"
hyper = "1.6.0"
tower-http = { version = "0.6.6", features = ["full"] }
hedera = { path = "../." }
hedera-proto = { path = "../protobufs", version = "0.19.0", features = ["time_0_3", "fraction"] }
once_cell = "1.21.3"
futures-util = "0.3.31"
serde_json = {version = "1.0.141", features = ["raw_value"] }
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.43"
hex = "0.4.3"
hex-literal = "1.0.0"

[dependencies.jsonrpsee]
version = "0.24.9"
features = ["server", "macros", "client-core"]

